<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_main"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_greeting"
            android:textSize="@dimen/text_big"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_greeting"
            android:layout_marginTop="@dimen/margin_main"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_slogan"
            android:textSize="@dimen/text_main"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tv_slogan"
            android:layout_marginTop="@dimen/margin_main"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_training"
            android:layout_gravity="center"
            android:text="@string/btn_training"
            android:layout_marginTop="@dimen/margin_main"
            android:textSize="@dimen/text_main"/>

    </LinearLayout>



</LinearLayout>